--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 # Visual Studio cache directory
 .vs/
 
+.idea/
+
 # Gradle cache directory
 .gradle/
 
@@ -54,6 +56,8 @@ ExportedObj/
 
 # Unity3D generated file on crash reports
 sysinfo.txt
+
+
 
 # Builds
 *.apk
